tests/snapshots/lib__generate-libravatar.snap
---
source: tests/lib.rs
expression: urls
---
[
    "https://cdn.libravatar.org/avatar/ecd836ee843ff0ab75d4720bd40c2baf",
    "https://cdn.libravatar.org/avatar/ebff9105dce4954b1bdb57fdab079ff3",
]
