tests/snapshots/lib__generator.snap
---
source: tests/lib.rs
expression: snapshot
---
[
    (
        "generate-gravatar",
        [
            "https://www.gravatar.com/avatar/ecd836ee843ff0ab75d4720bd40c2baf",
            "https://www.gravatar.com/avatar/ebff9105dce4954b1bdb57fdab079ff3",
        ],
    ),
    (
        "generate-libravatar",
        [
            "https://cdn.libravatar.org/avatar/ecd836ee843ff0ab75d4720bd40c2baf",
            "https://cdn.libravatar.org/avatar/ebff9105dce4954b1bdb57fdab079ff3",
        ],
    ),
]
