tests/snapshots/lib__hash-bauke-casing.snap
---
source: tests/lib.rs
expression: "Generator::hash_email(&email.to_uppercase())"
---
ecd836ee843ff0ab75d4720bd40c2baf
