tests/snapshots/lib__hash-bauke-whitespace.snap
---
source: tests/lib.rs
expression: "Generator::hash_email(&format!(\"  {email}  \"))"
---
ecd836ee843ff0ab75d4720bd40c2baf
