tests/snapshots/lib__hash-holllo-casing.snap
---
source: tests/lib.rs
expression: "Generator::hash_email(&email.to_uppercase())"
---
ebff9105dce4954b1bdb57fdab079ff3
