tests/snapshots/lib__hash-holllo-whitespace.snap
---
source: tests/lib.rs
expression: "Generator::hash_email(&format!(\"  {email}  \"))"
---
ebff9105dce4954b1bdb57fdab079ff3
